# pomagatchi

./: .gitignore  CMakeLists.txt  README.md
include/: buttons.h  clock.h  platform.h
src/: buttons.c  clock.c  downloader.c  main.c  platform_apple.m  platform_linux.c  platform_windows.c
